Added dq model to python bindings

--- a/olca-app/src/org/openlca/app/devtools/python/bindings.properties
+++ b/olca-app/src/org/openlca/app/devtools/python/bindings.properties
@@ -19,8 +19,6 @@ NwSet = org.openlca.core.model.NwSet
 Parameter = org.openlca.core.model.Parameter
 ParameterRedef = org.openlca.core.model.ParameterRedef
 ParameterScope = org.openlca.core.model.ParameterScope
-PedigreeMatrix = org.openlca.core.model.PedigreeMatrix
-PedigreeMatrixRow = org.openlca.core.model.PedigreeMatrixRow
 Process = org.openlca.core.model.Process
 ProcessDocumentation = org.openlca.core.model.ProcessDocumentation
 ProcessGroup = org.openlca.core.model.ProcessGroup
@@ -37,3 +35,6 @@ Uncertainty = org.openlca.core.model.Uncertainty
 UncertaintyType = org.openlca.core.model.UncertaintyType
 Unit = org.openlca.core.model.Unit
 UnitGroup = org.openlca.core.model.UnitGroup
+DQSystem = org.openlca.core.model.DQSystem
+DQIndicator = org.openlca.core.model.DQIndicator
+DQScore = org.openlca.core.model.DQScore
