--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -485,10 +485,6 @@
       <viewer
             viewerId="views.navigation">
             <options>
-		        <property
-		            name="org.eclipse.ui.navigator.hideLinkWithEditorAction"
-		            value="true">
-		         </property>
 		         <property
 		            name="org.eclipse.ui.navigator.hideCollapseAllAction"
 		            value="true">
@@ -518,6 +514,9 @@
             <contentExtension
                   pattern="viewer.filter.wasteflow">
             </contentExtension>
+			<contentExtension 
+				  pattern="navigator.linkHelper">
+			</contentExtension>
          </includes>
       </viewerContentBinding>
       <viewerActionBinding
@@ -595,6 +594,19 @@
             id="viewer.filter.wasteflow"
             name="%WasteFlows">
       </commonFilter>
+   </extension>
+   <extension
+         point="org.eclipse.ui.navigator.linkHelper">
+      <linkHelper
+	            class="org.openlca.app.navigation.NavigationLinkHelper"
+	            id="navigator.linkHelper">
+         <selectionEnablement>
+            <instanceof value="org.openlca.app.navigation.ModelElement"/>
+	     </selectionEnablement>
+	     <editorInputEnablement>
+			<instanceof value="org.openlca.app.editors.ModelEditorInput"/>
+	     </editorInputEnablement>
+      </linkHelper>
    </extension>
    <extension
          point="org.eclipse.core.runtime.preferences">
@@ -768,4 +780,5 @@
       		name="JSON-LD">
       </wizard>
    </extension>
+
 </plugin>
