--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-cloud-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-eigen-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-formula-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-geo-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-io-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-jsonld-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-1.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-codec-1.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mapdb-2.0-beta7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/bonecp-0.8.0.RELEASE.jar"/>
@@ -53,21 +65,9 @@
 	<classpathentry exported="true" kind="lib" path="libs/jt-utils-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jt-zonalstats-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jts-1.13.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7-b3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mimepull-1.9.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mysql-connector-java-5.1.25.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-cloud-1.5.0.jar" sourcepath="/olca-cloud"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.5.0.jar" sourcepath="/olca-core"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-1.5.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.5.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-eigen-1.5.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-formula-1.5.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-geo-1.5.0.jar" sourcepath="/olca-geo"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-1.5.0.jar" sourcepath="/olca-ilcd"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-io-1.5.0.jar" sourcepath="/olca-io"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-jsonld-1.5.0.jar" sourcepath="/olca-jsonld"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-1.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-3.2.0.v201206041011.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-3.3.1.v201206041142.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.4.0.jar"/>
