--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -67,21 +67,9 @@ bin.includes = plugin.xml,\
                libs/jt-utils-1.3.1.jar,\
                libs/jt-zonalstats-1.3.1.jar,\
                libs/jts-1.13.jar,\
-               libs/jython-standalone-2.7-b3.jar,\
                libs/log4j-1.2.17.jar,\
                libs/mimepull-1.9.3.jar,\
                libs/mysql-connector-java-5.1.25.jar,\
-               libs/olca-cloud-1.5.0.jar,\
-               libs/olca-core-1.5.0.jar,\
-               libs/olca-ecospold-1-1.5.0.jar,\
-               libs/olca-ecospold-2-1.5.0.jar,\
-               libs/olca-eigen-1.5.0.jar,\
-               libs/olca-formula-1.5.0.jar,\
-               libs/olca-geo-1.5.0.jar,\
-               libs/olca-ilcd-1.5.0.jar,\
-               libs/olca-io-1.5.0.jar,\
-               libs/olca-jsonld-1.5.0.jar,\
-               libs/olca-simapro-csv-1.5.0.jar,\
                libs/org.eclipse.persistence.antlr-3.2.0.v201206041011.jar,\
                libs/org.eclipse.persistence.asm-3.3.1.v201206041142.jar,\
                libs/org.eclipse.persistence.core-2.4.0.jar,\
@@ -102,4 +90,16 @@ bin.includes = plugin.xml,\
                libs/xsd-2.6.0.jar,\
                libs/zt-zip-1.8.jar,\
                libs/commons-codec-1.9.jar,\
-               libs/mapdb-2.0-beta7.jar
+               libs/mapdb-2.0-beta7.jar,\
+               libs/jython-standalone-2.7.0.jar,\
+               libs/olca-cloud-1.6.0.jar,\
+               libs/olca-core-1.6.0.jar,\
+               libs/olca-ecospold-1-1.6.0.jar,\
+               libs/olca-ecospold-2-1.6.0.jar,\
+               libs/olca-eigen-1.6.0.jar,\
+               libs/olca-formula-1.6.0.jar,\
+               libs/olca-geo-1.6.0.jar,\
+               libs/olca-ilcd-1.6.0.jar,\
+               libs/olca-io-1.6.0.jar,\
+               libs/olca-jsonld-1.6.0.jar,\
+               libs/olca-simapro-csv-1.6.0.jar
