--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -478,7 +478,7 @@
          </property>
          <property
                name="aboutText"
-               value="openLCA 1.5.0&#x0D;&#x0A;&#x0D;&#x0A;Copyright (c) 2007 - 2016 GreenDelta. All rights reserved.&#x0D;&#x0A;Visit http://openlca.org and http://greendelta.com&#x0D;&#x0A;&#x0D;&#x0A;This product includes software developed in the openLCA &#x0D;&#x0A;project and other open source software.">
+               value="openLCA 1.6.0&#x0A;&#x0A;Copyright (c) 2007 - 2016 GreenDelta. All rights reserved.&#x0A;Visit http://openlca.org and http://greendelta.com&#x0A;&#x0A;This product includes software developed in the openLCA &#x0A;project and other open source software.">
          </property>
          <property
                name="aboutImage"
