Implementation of new update mechanism

--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -102,4 +102,5 @@ bin.includes = plugin.xml,\
                libs/olca-ilcd-1.6.0.jar,\
                libs/olca-io-1.6.0.jar,\
                libs/olca-jsonld-1.6.0.jar,\
-               libs/olca-simapro-csv-1.6.0.jar
+               libs/olca-simapro-csv-1.6.0.jar,\
+               libs/olca-updates-1.6.0.jar
