--- a/olca-app-build/build.properties
+++ b/olca-app-build/build.properties
@@ -19,10 +19,10 @@
 # them on the command line (e.g., -DbaseLocation=d:/eclipse
 
 # the openLCA version that is used in the installer files etc.
-openlca_version = 1.6.0
+openlca_version = 1.6.1
 # the openLCA version + build id that can be used for file names and
 # display but the NSIS build will fail with this version.
-openlca_version_id = 1.6.0alpha
+openlca_version_id = 1.6.1beta1
 
 openlcaupdatesiteparam = -Dorg.openlca.core.updatesite=http://nexus.openlca.org/updatesite
 
