--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -471,7 +471,7 @@
          </property>
          <property
                name="aboutText"
-               value="openLCA 1.6.1&#x0D;&#x0A;&#x0D;&#x0A;Copyright (c) 2007 - 2017 GreenDelta. All rights reserved.&#x0D;&#x0A;Visit http://openlca.org and http://greendelta.com&#x0D;&#x0A;&#x0D;&#x0A;This product includes software developed in the openLCA &#x0D;&#x0A;project and other open source software.">
+               value="openLCA 1.6.1&#x0A;&#x0A;Copyright (c) 2007 - 2017 GreenDelta. All rights reserved.&#x0A;Visit http://openlca.org and http://greendelta.com&#x0A;&#x0A;This product includes software developed in the openLCA &#x0A;project and other open source software.">
          </property>
          <property
                name="aboutImage"
@@ -489,7 +489,7 @@
                value="openLCA" />
          <property
                name="startupProgressRect"
-               value="0,360,540,5">
+               value="0,400,565,5">
          </property>
          <property
                name="startupForegroundColor"
@@ -497,7 +497,7 @@
          </property>
          <property
                name="startupMessageRect"
-               value="7,500,445,20">
+               value="7,525,445,20">
          </property>
          <property
                name="preferenceCustomization"
