--- a/olca-app-build/build.properties
+++ b/olca-app-build/build.properties
@@ -22,7 +22,7 @@
 openlca_version = 1.6.1
 # the openLCA version + build id that can be used for file names and
 # display but the NSIS build will fail with this version.
-openlca_version_id = 1.6.1beta1
+openlca_version_id = 1.6.1.rc1
 
 openlcaupdatesiteparam = -Dorg.openlca.core.updatesite=http://nexus.openlca.org/updatesite
 
