--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -20,7 +20,6 @@ bin.includes = plugin.xml,\
                libs/bonecp-0.8.0.RELEASE.jar,\
                libs/common-2.6.0.jar,\
                libs/commons-beanutils-1.8.3.jar,\
-               libs/commons-collections-3.2.1.jar,\
                libs/commons-io-2.4.jar,\
                libs/commons-jxpath-1.3.jar,\
                libs/commons-lang3-3.1.jar,\
@@ -57,8 +56,6 @@ bin.includes = plugin.xml,\
                libs/jersey-core-1.19.jar,\
                libs/jersey-multipart-1.19.jar,\
                libs/jgridshift-1.0.jar,\
-               libs/joda-convert-1.3.1.jar,\
-               libs/joda-time-2.2.jar,\
                libs/jsr-275-1.0-beta-2.jar,\
                libs/jsr311-api-1.1.1.jar,\
                libs/jt-utils-1.3.1.jar,\
@@ -78,7 +75,6 @@ bin.includes = plugin.xml,\
                libs/poi-ooxml-schemas-3.12.jar,\
                libs/slf4j-api-1.7.2.jar,\
                libs/slf4j-log4j12-1.7.2.jar,\
-               libs/stax-api-1.0.1.jar,\
                libs/super-csv-2.1.0.jar,\
                libs/trove4j-3.0.3.jar,\
                libs/vecmath-1.3.2.jar,\
@@ -100,4 +96,5 @@ bin.includes = plugin.xml,\
                libs/olca-io-1.6.2.jar,\
                libs/olca-jsonld-1.6.2.jar,\
                libs/olca-simapro-csv-1.6.2.jar,\
-               libs/olca-updates-1.6.2.jar
+               libs/olca-updates-1.6.2.jar,\
+               libs/commons-collections-3.2.2.jar
