--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,31 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="libs/guava-21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-math3-3.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/derby-10.13.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/HikariCP-2.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/javax.json-1.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/javax.persistence-2.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-cloud-1.6.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.6.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-1.6.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.6.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-eigen-1.6.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-formula-1.6.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-geo-1.6.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-1.6.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-io-1.6.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-jsonld-1.6.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-1.6.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-updates-1.6.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-2.6.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-2.6.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.6.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa-2.6.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa.jpql-2.6.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-collections-3.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-cloud-1.6.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.6.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-1.6.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.6.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-eigen-1.6.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-formula-1.6.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-geo-1.6.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-1.6.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-io-1.6.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-jsonld-1.6.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-1.6.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-codec-1.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mapdb-2.0-beta7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/bonecp-0.8.0.RELEASE.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/common-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-beanutils-1.8.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-io-2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-jxpath-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-lang3-3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-logging-1.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/commons-math3-3.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-pool-1.5.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/derby-10.10.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/ecore-2.6.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gson-2.2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-api-10.3.jar"/>
@@ -42,13 +51,11 @@
 	<classpathentry exported="true" kind="lib" path="libs/gt-swt-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-xsd-core-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-xsd-kml-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/guava-14.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/imageio-ext-tiff-1.1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/imageio-ext-utilities-1.1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jai_codec-1.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jai_core-1.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jai_imageio-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/javax.persistence-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jcl-over-slf4j-1.7.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jdom-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jersey-client-1.19.jar"/>
@@ -63,11 +70,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mimepull-1.9.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mysql-connector-java-5.1.25.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-3.2.0.v201206041011.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-3.3.1.v201206041142.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.4.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa-2.4.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa.jpql-2.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/picocontainer-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/poi-3.12.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/poi-ooxml-3.12.jar"/>
@@ -81,7 +83,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/xmlbeans-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xsd-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/zt-zip-1.8.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-updates-1.6.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="bin"/>
