--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -17,16 +17,13 @@ bin.includes = plugin.xml,\
                html/,\
                plugin_customization.ini,\
                db_templates/,\
-               libs/bonecp-0.8.0.RELEASE.jar,\
                libs/common-2.6.0.jar,\
                libs/commons-beanutils-1.8.3.jar,\
                libs/commons-io-2.4.jar,\
                libs/commons-jxpath-1.3.jar,\
                libs/commons-lang3-3.1.jar,\
                libs/commons-logging-1.1.1.jar,\
-               libs/commons-math3-3.1.1.jar,\
                libs/commons-pool-1.5.4.jar,\
-               libs/derby-10.10.1.1.jar,\
                libs/ecore-2.6.1.jar,\
                libs/gson-2.2.4.jar,\
                libs/gt-api-10.3.jar,\
@@ -43,13 +40,11 @@ bin.includes = plugin.xml,\
                libs/gt-swt-10.3.jar,\
                libs/gt-xsd-core-10.3.jar,\
                libs/gt-xsd-kml-10.3.jar,\
-               libs/guava-14.0.1.jar,\
                libs/imageio-ext-tiff-1.1.7.jar,\
                libs/imageio-ext-utilities-1.1.7.jar,\
                libs/jai_codec-1.1.3.jar,\
                libs/jai_core-1.1.3.jar,\
                libs/jai_imageio-1.1.jar,\
-               libs/javax.persistence-2.0.0.jar,\
                libs/jcl-over-slf4j-1.7.2.jar,\
                libs/jdom-1.0.jar,\
                libs/jersey-client-1.19.jar,\
@@ -64,11 +59,6 @@ bin.includes = plugin.xml,\
                libs/log4j-1.2.17.jar,\
                libs/mimepull-1.9.3.jar,\
                libs/mysql-connector-java-5.1.25.jar,\
-               libs/org.eclipse.persistence.antlr-3.2.0.v201206041011.jar,\
-               libs/org.eclipse.persistence.asm-3.3.1.v201206041142.jar,\
-               libs/org.eclipse.persistence.core-2.4.0.jar,\
-               libs/org.eclipse.persistence.jpa-2.4.0.jar,\
-               libs/org.eclipse.persistence.jpa.jpql-2.4.0.jar,\
                libs/picocontainer-1.2.jar,\
                libs/poi-3.12.jar,\
                libs/poi-ooxml-3.12.jar,\
@@ -85,16 +75,27 @@ bin.includes = plugin.xml,\
                libs/commons-codec-1.9.jar,\
                libs/mapdb-2.0-beta7.jar,\
                libs/jython-standalone-2.7.0.jar,\
-               libs/olca-cloud-1.6.2.jar,\
-               libs/olca-core-1.6.2.jar,\
-               libs/olca-ecospold-1-1.6.2.jar,\
-               libs/olca-ecospold-2-1.6.2.jar,\
-               libs/olca-eigen-1.6.2.jar,\
-               libs/olca-formula-1.6.2.jar,\
-               libs/olca-geo-1.6.2.jar,\
-               libs/olca-ilcd-1.6.2.jar,\
-               libs/olca-io-1.6.2.jar,\
-               libs/olca-jsonld-1.6.2.jar,\
-               libs/olca-simapro-csv-1.6.2.jar,\
-               libs/olca-updates-1.6.2.jar,\
-               libs/commons-collections-3.2.2.jar
+               libs/commons-collections-3.2.2.jar,\
+               libs/commons-math3-3.6.1.jar,\
+               libs/derby-10.13.1.1.jar,\
+               libs/HikariCP-2.6.1.jar,\
+               libs/javax.json-1.0.4.jar,\
+               libs/javax.persistence-2.1.1.jar,\
+               libs/olca-cloud-1.6.3.jar,\
+               libs/olca-core-1.6.3.jar,\
+               libs/olca-ecospold-1-1.6.3.jar,\
+               libs/olca-ecospold-2-1.6.3.jar,\
+               libs/olca-eigen-1.6.3.jar,\
+               libs/olca-formula-1.6.3.jar,\
+               libs/olca-geo-1.6.3.jar,\
+               libs/olca-ilcd-1.6.3.jar,\
+               libs/olca-io-1.6.3.jar,\
+               libs/olca-jsonld-1.6.3.jar,\
+               libs/olca-simapro-csv-1.6.3.jar,\
+               libs/olca-updates-1.6.3.jar,\
+               libs/org.eclipse.persistence.antlr-2.6.4.jar,\
+               libs/org.eclipse.persistence.asm-2.6.4.jar,\
+               libs/org.eclipse.persistence.core-2.6.4.jar,\
+               libs/org.eclipse.persistence.jpa-2.6.4.jar,\
+               libs/org.eclipse.persistence.jpa.jpql-2.6.4.jar,\
+               libs/guava-21.0.jar
