removed background image of start page from version control, etc.

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -463,7 +463,7 @@
          </property>
          <property
                name="aboutText"
-               value="openLCA 1.6.2&#x0A;&#x0A;Copyright (c) 2007 - 2017 GreenDelta. All rights reserved.&#x0A;Visit http://openlca.org and http://greendelta.com&#x0A;&#x0A;This product includes software developed in the openLCA &#x0A;project and other open source software.">
+               value="openLCA 1.6.3&#x0D;&#x0A;&#x0D;&#x0A;Copyright (c) 2007 - 2017 GreenDelta. All rights reserved.&#x0D;&#x0A;Visit http://openlca.org and http://greendelta.com&#x0D;&#x0A;&#x0D;&#x0A;This product includes software developed in the openLCA &#x0D;&#x0A;project and other open source software.">
          </property>
          <property
                name="aboutImage"
@@ -481,7 +481,7 @@
                value="openLCA" />
          <property
                name="startupProgressRect"
-               value="0,400,565,5">
+               value="0,360,540,5">
          </property>
          <property
                name="startupForegroundColor"
