--- a/olca-refdata/pom.xml
+++ b/olca-refdata/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.openlca</groupId>
 	<artifactId>olca-refdata</artifactId>
-	<version>1.6.2</version>
+	<version>1.6.3</version>
 	<name>olca-refdata</name>
 	<description>Project for generating the reference databases</description>
 
@@ -28,6 +28,12 @@
 		<dependency>
 			<groupId>org.openlca</groupId>
 			<artifactId>olca-updates</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.openlca</groupId>
+			<artifactId>olca-cloud</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
