--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -81,21 +81,20 @@ bin.includes = plugin.xml,\
                libs/HikariCP-2.6.1.jar,\
                libs/javax.json-1.0.4.jar,\
                libs/javax.persistence-2.1.1.jar,\
-               libs/olca-cloud-1.6.3.jar,\
-               libs/olca-core-1.6.3.jar,\
-               libs/olca-ecospold-1-1.6.3.jar,\
-               libs/olca-ecospold-2-1.6.3.jar,\
-               libs/olca-eigen-1.6.3.jar,\
-               libs/olca-formula-1.6.3.jar,\
-               libs/olca-geo-1.6.3.jar,\
-               libs/olca-ilcd-1.6.3.jar,\
-               libs/olca-io-1.6.3.jar,\
-               libs/olca-jsonld-1.6.3.jar,\
-               libs/olca-simapro-csv-1.6.3.jar,\
-               libs/olca-updates-1.6.3.jar,\
                libs/org.eclipse.persistence.antlr-2.6.4.jar,\
                libs/org.eclipse.persistence.asm-2.6.4.jar,\
                libs/org.eclipse.persistence.core-2.6.4.jar,\
                libs/org.eclipse.persistence.jpa-2.6.4.jar,\
                libs/org.eclipse.persistence.jpa.jpql-2.6.4.jar,\
-               libs/guava-21.0.jar
+               libs/guava-21.0.jar,\
+               libs/olca-cloud-1.7.0.jar,\
+               libs/olca-core-1.7.0.jar,\
+               libs/olca-ecospold-1-1.7.0.jar,\
+               libs/olca-ecospold-2-1.7.0.jar,\
+               libs/olca-formula-1.7.0.jar,\
+               libs/olca-geo-1.7.0.jar,\
+               libs/olca-ilcd-1.7.0.jar,\
+               libs/olca-io-1.7.0.jar,\
+               libs/olca-jsonld-1.7.0.jar,\
+               libs/olca-simapro-csv-1.7.0.jar,\
+               libs/olca-updates-1.7.0.jar
