--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -9,17 +9,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa-2.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa.jpql-2.7.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-cloud-1.7.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.7.0.jar" />
-	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-1.7.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.7.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-formula-1.7.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-geo-1.7.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-1.7.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-io-1.7.0.jar" />
-	<classpathentry exported="true" kind="lib" path="libs/olca-jsonld-1.7.0.jar" />
-	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-1.7.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-updates-1.7.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/guava-21.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-math3-3.6.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/javax.json-1.0.4.jar"/>
@@ -84,5 +73,16 @@
 	<classpathentry exported="true" kind="lib" path="libs/zt-zip-1.8.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="lib" path="libs/olca-cloud-1.7.1.jar"/>
+	<classpathentry kind="lib" path="libs/olca-core-1.7.1.jar"/>
+	<classpathentry kind="lib" path="libs/olca-ecospold-1-1.7.1.jar"/>
+	<classpathentry kind="lib" path="libs/olca-ecospold-2-1.7.1.jar"/>
+	<classpathentry kind="lib" path="libs/olca-formula-1.7.1.jar"/>
+	<classpathentry kind="lib" path="libs/olca-geo-1.7.1.jar"/>
+	<classpathentry kind="lib" path="libs/olca-ilcd-1.7.1.jar"/>
+	<classpathentry kind="lib" path="libs/olca-io-1.7.1.jar"/>
+	<classpathentry kind="lib" path="libs/olca-jsonld-1.7.1.jar"/>
+	<classpathentry kind="lib" path="libs/olca-simapro-csv-1.7.1.jar"/>
+	<classpathentry kind="lib" path="libs/olca-updates-1.7.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
