--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="libs/nanohttpd-2.3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ipc-1.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/derby-10.14.1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/HikariCP-2.7.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/javax.persistence-2.2.0.jar"/>
