--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -56,6 +56,12 @@
 			<artifactId>olca-io</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.openlca</groupId>
+			<artifactId>olca-ipc</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.openlca</groupId>
