--- a/olca-app-html/package.json
+++ b/olca-app-html/package.json
@@ -9,16 +9,17 @@
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.5.2",
     "gulp-file-include": "^0.8.0",
+    "gulp-foreach": "~0.1.0",
     "gulp-jade": "^1.0.0",
+    "gulp-load-plugins": "~1.2.0",
+    "gulp-pug": "^4.0.1",
+    "gulp-rename": "~1.2.2",
     "gulp-stylus": "^2.0.1",
     "gulp-zip": "^2.0.3",
     "jade": "^1.9.2",
     "nib": "^1.1.0",
     "run-sequence": "^1.0.2",
-    "stylus": "^0.50.0",
-    "gulp-foreach": "~0.1.0",
-    "gulp-rename": "~1.2.2",
-    "gulp-load-plugins": "~1.2.0"
+    "stylus": "^0.50.0"
   },
   "dependencies": {
     "angular": "^1.4.3",
