--- a/olca-app-html/package.json
+++ b/olca-app-html/package.json
@@ -2,27 +2,27 @@
   "name": "openLCA",
   "version": "1.4.1",
   "devDependencies": {
-    "coffee": "^1.0.0",
+    "coffee": "^1.3.1",
     "gulp": "^3.8.11",
-    "gulp-clean": "^0.3.1",
-    "gulp-coffee": "^2.3.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-coffee": "^2.3.5",
     "gulp-concat": "^2.5.2",
     "gulp-file-include": "^0.8.0",
     "gulp-foreach": "~0.1.0",
     "gulp-pug": "^4.0.1",
-    "gulp-rename": "~1.2.2",
-    "gulp-stylus": "^2.0.1",
+    "gulp-rename": "^1.2.3",
+    "gulp-stylus": "^2.7.0",
     "gulp-zip": "^2.0.3",
     "nib": "^1.1.0",
     "run-sequence": "^1.0.2",
     "stylus": "^0.50.0"
   },
   "dependencies": {
-    "angular": "^1.4.3",
-    "angular-sanitize": "^1.4.3",
-    "bootstrap": "^3.3.5",
-    "codemirror": "^5.5.0",
-    "d3": "^3.5.6",
-    "jquery": "^2.1.4"
+    "angular": "^1.7.0",
+    "angular-sanitize": "^1.7.0",
+    "bootstrap": "^3.3.7",
+    "codemirror": "^5.38.0",
+    "d3": "^3.5.17",
+    "jquery": "^2.2.4"
   }
 }
