--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.extension-2.7.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-2.7.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-2.7.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.7.3.jar"/>
