use search page to also display usages

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -257,7 +257,7 @@
             class="org.openlca.app.search.SearchPage"
             icon="icons/search.png"
             default="false"
-            name="Search result view">
+            name="%SearchResults">
       </editor> 
 
 	  <editor
