--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -487,7 +487,7 @@
          </property>
          <property
                name="aboutText"
-               value="openLCA 1.7.4&#x0A;&#x0A;Copyright (c) 2007 - 2018 GreenDelta. All rights reserved.&#x0A;Visit http://openlca.org and http://greendelta.com&#x0A;&#x0A;This product includes software developed in the openLCA &#x0A;project and other open source software.">
+               value="openLCA 1.8.0&#x0D;&#x0A;&#x0D;&#x0A;Copyright (c) 2007 - 2019 GreenDelta. All rights reserved.&#x0D;&#x0A;Visit http://openlca.org and http://greendelta.com&#x0D;&#x0A;&#x0D;&#x0A;This product includes software developed in the openLCA &#x0D;&#x0A;project and other open source software.">
          </property>
          <property
                name="aboutImage"
@@ -508,16 +508,16 @@
                value="0,399,540,5">
          </property>
          <property
-               name="preferenceCustomization"
-               value="plugin_customization.ini">
-         </property>
-         <property
                name="startupForegroundColor"
                value="000000">
          </property>
          <property
                name="startupMessageRect"
                value="7,525,445,20">
+         </property>
+         <property
+               name="preferenceCustomization"
+               value="plugin_customization.ini">
          </property>
       </product>
    </extension>
