more macos scripts ...

--- a/olca-app-build/macos/openLCA.ini
+++ b/olca-app-build/macos/openLCA.ini
@@ -6,6 +6,8 @@
 en
 -data
 @noDefault
+-vm
+../../jre/Contents/Home/lib/jli/libjli.dylib
 -vmargs
 -Xmx3584M
 -Dosgi.framework.extensions=org.eclipse.fx.osgi
