fixed class path of the LogFileEditor in plugin.xml

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -234,7 +234,7 @@
       </editor> 
       <editor
             id="editors.LogFileEditor"
-            class="org.openlca.app.editors.LogFileEditor"
+            class="org.openlca.app.logging.LogFileEditor"
             icon="icons/file.png"
             name="Log file">
       </editor>       
