ok, a generic `Open` action for flow mappings is maybe less confusing
for the user. We will try to identify the source and open a dialog
for additional actions if applicable:

* JSON-LD package with possible mappings defined: open a dialog for
  selecting a mapping from the package or for creating a new mapping
  based on the content of the package and the database.
* ILCD package: open a dialog for selecting an additional CSV file
  that describes the mapping or for creating a new mapping
  based on the content of the package and the database.
* CSV file: directly synchronize and open the mappings from the CSV
  file.

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -296,7 +296,8 @@
             default="false"
             icon="icons/model/flow.png"
             id="MappingTool"
-            name="Flow mapping">
+            name="Flow mapping"
+            contributorClass="org.openlca.app.tools.mapping.MappingMenu">
       </editor>
 
    </extension>
