--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -137,6 +137,12 @@
 		</dependency>
 
     <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.11</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>42.2.6</version>
