--- a/olca-app-build/macos/Info.plist
+++ b/olca-app-build/macos/Info.plist
@@ -1,43 +1,38 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
 <plist version="1.0">
 
-<dict>
-	<key>CFBundleExecutable</key>
+	<dict>
+		<key>CFBundleExecutable</key>
 		<string>eclipse</string>
-	<key>CFBundleGetInfoString</key>
-		<string>Eclipse 4.11 for Mac OS X, Copyright IBM Corp. and others 2002, 2019. All rights reserved.</string>
-	<key>CFBundleIconFile</key>
+		<key>CFBundleGetInfoString</key>
+		<string>openLCA 1.10</string>
+		<key>CFBundleIconFile</key>
 		<string>logo.icns</string>
-	<key>CFBundleIdentifier</key>
+		<key>CFBundleIdentifier</key>
 		<string>Eclipse</string>
-	<key>CFBundleInfoDictionaryVersion</key>
+		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
-	<key>CFBundleName</key>
-		<string>Eclipse</string>
-	<key>CFBundlePackageType</key>
+		<key>CFBundleName</key>
+		<string>openLCA</string>
+		<key>CFBundlePackageType</key>
 		<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-		<string>4.11</string>
-	<key>CFBundleSignature</key>
+		<key>CFBundleShortVersionString</key>
+		<string>1.10</string>
+		<key>CFBundleSignature</key>
 		<string>????</string>
-	<key>CFBundleVersion</key>
-		<string>4.11</string>
-	<key>NSHighResolutionCapable</key>
-		<true/>
-	<key>CFBundleDevelopmentRegion</key>
-		<string>English</string>		
-	<key>Eclipse</key>
+		<key>CFBundleVersion</key>
+		<string>1.10</string>
+		<key>NSHighResolutionCapable</key>
+		<true />
+		<key>CFBundleDevelopmentRegion</key>
+		<string>English</string>
+		<key>Eclipse</key>
 		<array>
-			<!-- to use a specific Java version (instead of the platform's default) uncomment one of the following options,
-					or add a VM found via $/usr/libexec/java_home -V
-				<string>-vm</string><string>/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Commands/java</string>
-				<string>-vm</string><string>/Library/Java/JavaVirtualMachines/1.8.0.jdk/Contents/Home/bin/java</string>
-			-->
 			<string>-keyring</string>
-      <string>~/.eclipse_keyring</string>
+			<string>~/.eclipse_keyring</string>
 		</array>
-<key>CFBundleDisplayName</key>
-    <string>openLCA</string>
-  </dict>
+		<key>CFBundleDisplayName</key>
+		<string>openLCA</string>
+	</dict>
 
 </plist>
