--- a/olca-app-build/macos/openLCA.ini
+++ b/olca-app-build/macos/openLCA.ini
@@ -10,7 +10,7 @@ en
 ../../jre/Contents/Home/lib/jli/libjli.dylib
 -vmargs
 -Xmx3584M
--Dosgi.framework.extensions=org.eclipse.fx.osgi
+-Dpython.console.encoding=UTF-8
 --add-modules=ALL-SYSTEM
 -XstartOnFirstThread
 -Dorg.eclipse.swt.internal.carbon.smallFonts
