now, going a bit into the UI
the old `model-check-list`:

[x] Create Model class
[x] Add ModelType
[ ] Write DBUpgrade class
[x] Create Descriptor class
[x] Add toDescriptor method to Descriptors and add call in
toDescriptor(CategorizedEntity)
[x] Create Dao class
[x] Add to persistence.xml
[x] Add case in createCategorizedDao in Daos class
[x] Add type to registerDescriptorDaos in EntityCache's inner Loader
class
[x] Create ModelWizard
[ ] Create ModelEditor
[ ] Add Icons to ModelIcon
[x] Add ModelType to Navigation ModelTypeComparison
[-] Add ModelTypeElement to Navigation DatabaseElement
[x] Add ModelType to SearchText class
[ ] Add ModelType Label to Labels
[ ] Add label to CreateModelAction
[ ] Add ModelType to ModelPath class in JSON Export
[ ] Add ModelType to BaseImport class in JSON Import
[ ] ReferenceSearch
[ ] Extend DatabaseImport for new model
[ ] Add to JSON export/import (and possibly other exports/imports)
[ ] (Add icon / add return image in
org.openlca.app.cloud.ui.compare.json.ModelLabelProvider)
[ ] (Add putLabels method in
org.openlca.app.cloud.ui.compare.json.PropertyLabels)
[ ] (Add enum labels in
org.openlca.app.cloud.ui.compare.json.EnumFields)
[ ] (Add date fields in
org.openlca.app.cloud.ui.compare.json.DateFields)
[ ] /checklater (Check org.openlca.app.cloud.ui.compare.json for
possible adjustments of model display in diff editor)
[ ] Add entries in bindings.properties in app script apis (js & python)

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -144,7 +144,7 @@
             class="org.openlca.app.editors.lcia_methods.ImpactCategoryEditor"
             default="false"
             icon="icons/model/impact_category.png"
-            id="editors.impact.category"
+            id="editors.impactcategory"
             name="Environmental indicator">
       </editor>
       <editor
