ok, Jython 2.7.2 is still in beta but it fixes so many
things ... we switch to this for now

--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7.2b2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/super-csv-2.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-cloud-1.9.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.9.0.jar"/>
