replace the KML import wizards with a single
GeoJSON import wizard. The GeoJSON import tries
to assign geometries from a GeoJSON file via
feature attributes. If it can find a location
in the database via these attributes it updates
the corresponding geometry.

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -752,16 +752,10 @@
 		   <description>Import SimaPro CSV files.</description>
 	   </wizard>
 	   <wizard
-          class="org.openlca.app.editors.locations.Es2KMLImportWizard"
-          icon="icons/file/xml.png"
-          id="wizard.import.kmz"
-          name="EcoSpold2 geographies">
-       </wizard>
-	   <wizard
-          class="org.openlca.app.editors.locations.KmlImportWizard"
-          icon="icons/file/xml.png"
-          id="wizard.import.kml"
-          name="KML geographies">
+          class="org.openlca.app.wizards.io.GeoJsonImportWizard"
+          icon="icons/model/location.png"
+          id="wizard.import.geojson"
+          name="Geometries from GeoJSON">
        </wizard>
     <wizard
           class="org.openlca.app.wizards.io.RepositoryImportWizard"
